@@ -1,9 +1,10 @@
 `ordixyplot` <-
     function(x, data = NULL, formula, display = "sites", choices=1:3,
-             panel = "panel.ordi", aspect = "iso",  ...)
+             scaling = 2, panel = "panel.ordi", aspect = "iso",  ...)
 {
     require(lattice) || stop("requires package 'lattice'")
-    x <- as.data.frame(scores(x, display = display, choices = choices))
+    x <- as.data.frame(scores(x, display = display, choices = choices,
+                              scaling = scaling))
     if (!is.null(data))
         x <- cbind(x, data)
     if (missing(formula)) {
